RESOLVED FIXED156604
ASSERT when loading github.com
https://bugs.webkit.org/show_bug.cgi?id=156604
Summary ASSERT when loading github.com
Myles C. Maxfield
Reported 2016-04-14 15:20:11 PDT
ASSERT when loading github.com
Attachments
Patch (3.52 KB, patch)
2016-04-14 15:22 PDT, Myles C. Maxfield
no flags
Patch (3.76 KB, patch)
2016-04-14 15:27 PDT, Myles C. Maxfield
darin: review+
Myles C. Maxfield
Comment 1 2016-04-14 15:22:25 PDT
Myles C. Maxfield
Comment 2 2016-04-14 15:27:19 PDT
Myles C. Maxfield
Comment 3 2016-04-14 15:27:42 PDT
Myles C. Maxfield
Comment 4 2016-04-14 16:13:36 PDT
*** Bug 155748 has been marked as a duplicate of this bug. ***
Daniel Bates
Comment 5 2016-04-14 16:37:08 PDT
Comment on attachment 276439 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=276439&action=review > Source/WebCore/html/HTMLInputElement.cpp:924 > + updateValidity(); Although this is sufficient to fix this bug. I suspect that this validity issue also affects other form controls, including <textarea> and <select>. > LayoutTests/fast/forms/checkValidity-cloneNode-crash-expected.txt:5 > +TEST COMPLETE > +This test makes sure that calling checkValidity() on a cloned node does not crash a Debug build. The test passes if there is no crash (and if you don't see any "FAIL"s). It is weird that we print the test description after "TEST COMPLETE". We should make use of description() (defined in js-test-pre.js) to add a test description. This function will ensure that we print the test description along with a message on how to interpret the test results before the PASS messages and the "TEST COMPLETE" message. > LayoutTests/fast/forms/checkValidity-cloneNode-crash.html:7 > +This test makes sure that calling checkValidity() on a cloned node does not crash a Debug build. The test passes if there is no crash (and if you don't see any "FAIL"s). Please use description() to record the this test description, taking care to encode HTML entities. One example of a test that makes use of description() is <http://trac.webkit.org/browser/trunk/LayoutTests/fast/box-decoration-break/box-decoration-break-parsing.html?rev=199567>.
Daniel Bates
Comment 6 2016-04-14 16:40:36 PDT
For completeness, Blink addressed the <textarea> and <select> variants of this bug in <https://bugs.chromium.org/p/chromium/issues/detail?id=461414> and <https://bugs.chromium.org/p/chromium/issues/detail?id=461412>, respectively.
Renata Hodovan
Comment 7 2016-04-15 00:24:08 PDT
(In reply to comment #4) > *** Bug 155748 has been marked as a duplicate of this bug. *** (Btw the "duplicate" was also a reduced version of the github assert. Reported 3 weeks ago :))
Darin Adler
Comment 8 2016-04-15 08:55:10 PDT
Comment on attachment 276439 [details] Patch Looks OK. We have a lot of other problems with the validity code, tracked by other bugs. Sam Weinig has questioned the value of the form validation features, although they are in the HTML standard; if we do keep them we need a much more extensive test suite and an improved implementation. At the moment the cost of trying to make these features work certainly greatly outweighs their usefulness.
Myles C. Maxfield
Comment 9 2016-04-15 12:59:11 PDT
Note You need to log in before you can comment on or make changes to this bug.