ASSERT when loading github.com https://bugs.webkit.org/show_bug.cgi?id=156604 <rdar://problem/19890634>

Reviewed by Darin Adler.

Source/WebCore:

HTMLFormControlElement::m_isValid is a cache of the results of the valid() function.
When cloning the node, we were preserving each individual item, but not the state
of the cache. Therefore, the cache and the attributes didn't agree with each other.

Test: fast/forms/checkValidity-cloneNode-crash.html

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::copyNonAttributePropertiesFromElement):

LayoutTests:

* fast/forms/checkValidity-cloneNode-crash-expected.txt: Added.
* fast/forms/checkValidity-cloneNode-crash.html: Added.

Canonical link: https://commits.webkit.org/174744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199607 268f45cc-cd09-0410-ab3c-d52691b4dbfc